Added image link to navigation. Adjusted text slightly.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.datasource.password=salebook
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 
-upload.path=/Users/vassilimoskaljov/Desktop/My Fork/SalesBook/upp
+upload.path=/Users/vassilimoskaljov/Desktop/My Fork/SalesBook/upd
 spring.freemarker.expose-request-attributes=true
-spring.freemarker.cache=false
+spring.freemarker.cache=true
 
 #spring.jpa.show-sql=false
