updated connection data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost/salebook
-spring.datasource.username=salebook
-spring.datasource.password=salebook
+spring.datasource.url=jdbc:postgresql://localhost/salesbook
+spring.datasource.username=salesbook
+spring.datasource.password=salesbook
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 
