--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 
 upload.path=/Users/vassilimoskaljov/Desktop/My Fork/SalesBook/upd
-#spring.freemarker.expose-request-attributes=true
+spring.freemarker.expose-request-attributes=true
 spring.freemarker.cache=true
 
 #spring.jpa.show-sql=false
