--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,16 @@
 <!--            <version>2.4.0-b180830.0359</version>-->
         </dependency>
 <!--    Pdf Dependecies     -->
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.10</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+<!--            <version>2.0.19</version>-->
+        </dependency>
 
     </dependencies>
 
