--- a/pom.xml
+++ b/pom.xml
@@ -87,9 +87,9 @@
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
-<!--            <version>2.4.0-b180830.0359</version>-->
+            <!--            <version>2.4.0-b180830.0359</version>-->
         </dependency>
-<!--    Pdf Dependecies     -->
+        <!--    Pdf Dependecies     -->
         <dependency>
             <groupId>com.itextpdf</groupId>
             <artifactId>itextpdf</artifactId>
@@ -98,7 +98,13 @@
         <dependency>
             <groupId>org.apache.pdfbox</groupId>
             <artifactId>pdfbox</artifactId>
-<!--            <version>2.0.19</version>-->
+            <version>2.0.19</version>
+        </dependency>
+        <!--  Cryptygraphy   -->
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>1.56</version>
         </dependency>
 
     </dependencies>
