--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.username=salesbook
 spring.datasource.password=salesbook
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 upload.path=/Users/vassilimoskaljov/Desktop/My Fork/SalesBook/upd
 spring.freemarker.expose-request-attributes=true
