Removed FreeMarker dependency

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.datasource.url=jdbc:postgresql://localhost/salesbook
 spring.datasource.username=salesbook
 spring.datasource.password=salesbook
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=false
 
 upload.path=/Users/vassilimoskaljov/Desktop/My Fork/SalesBook/upd
 spring.freemarker.expose-request-attributes=true
