--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,9 @@
-spring.datasource.url=jdbc:postgresql://localhost/salesbook
-spring.datasource.username=salesbook
-spring.datasource.password=salesbook
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost/salesbook}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:salesbook}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:salesbook}
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
 
-upload.path=/Users/vassilimoskaljov/Desktop/My Fork/SalesBook/upd
 spring.freemarker.expose-request-attributes=true
 spring.freemarker.cache=true
-
-#spring.jpa.show-sql=false
