--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+        <!-- Hibernate -->
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
@@ -65,45 +65,37 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-impl -->
+        <!-- JaxB -->
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-impl</artifactId>
             <version>2.4.0-b180830.0438</version>
         </dependency>
-
-        <!-- https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-core -->
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-core</artifactId>
             <version>2.3.0.1</version>
         </dependency>
-
-        <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
-            <!--            <version>2.4.0-b180830.0359</version>-->
         </dependency>
-        <!--    Pdf Dependecies     -->
+        <!--    Pdf Dependencies     -->
         <dependency>
             <groupId>com.itextpdf</groupId>
             <artifactId>itextpdf</artifactId>
             <version>5.5.10</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/com.itextpdf/kernel -->
         <dependency>
             <groupId>com.itextpdf</groupId>
             <artifactId>kernel</artifactId>
             <version>7.1.11</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/com.itextpdf/layout -->
         <dependency>
             <groupId>com.itextpdf</groupId>
             <artifactId>layout</artifactId>
             <version>7.1.11</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/com.itextpdf/io -->
         <dependency>
             <groupId>com.itextpdf</groupId>
             <artifactId>io</artifactId>
@@ -115,20 +107,24 @@
             <artifactId>pdfbox</artifactId>
             <version>2.0.19</version>
         </dependency>
-        <!--  Cryptygraphy   -->
+        <!--  Cryptography   -->
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcprov-jdk15on</artifactId>
             <version>1.56</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.flywaydb/flyway-core -->
+        <!-- FlyWay Migration -->
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
-<!--            <version>6.4.1</version>-->
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <version>2.4.0</version>
+        </dependency>
 
     </dependencies>
 
@@ -140,6 +136,8 @@
             </plugin>
         </plugins>
     </build>
+
+
 
     <repositories>
         <repository>
