--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,13 @@
             <version>5.4.9.Final</version>
         </dependency>
 
+        <!--   Thymeleaf     -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            <version>2.4.0</version>
+        </dependency>
+
         <!--Postgresql-->
         <dependency>
             <groupId>org.postgresql</groupId>
