--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,21 @@
             <version>2.4.0</version>
         </dependency>
 
+        <!--Swagger-->
+        <!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+
+
         <!--Postgresql-->
         <dependency>
             <groupId>org.postgresql</groupId>
