--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,18 @@
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost/salesbook}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:salesbook}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:salesbook}
-spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=validate
+#spring.datasource.url=jdbc:postgresql://localhost:5500/salebook
+#spring.datasource.username=salebook
+#spring.datasource.password=salebook
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 
 spring.freemarker.expose-request-attributes=true
 spring.freemarker.cache=true
+
+#spring.datasource.url=jdbc:h2:mem:salebook
+spring.datasource.url=jdbc:h2:file:c/data/salebook
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+baseDir=${user.home}
