Added export path config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,8 @@ spring.freemarker.expose-request-attributes=true
 spring.freemarker.cache=true
 
 #spring.datasource.url=jdbc:h2:mem:salebook
-spring.datasource.url=jdbc:h2:file:c/data/salebook
+spring.datasource.url=jdbc:h2:file:${user.home}/data/salebook
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-baseDir=${user.home}
